# hehel-zip

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: auth-heron-hcom.md  cloud-sync-manifest.md  compression.md  hehe-format.md  hehel-zip-hestia-kanban.md  perf-baseline.md
e2e/: smoke.spec.ts
migrations/local/: 001_init.sql  002_uuid_statuses.sql  003_action_log.sql
scripts/: copy-7z.ps1  with-cargo-path.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/archive/: adapter.rs  archive_service.rs  backend.rs  extract.rs  extract_cache.rs  hehe_backend.rs  hehe_format.rs  image_webp.rs  mod.rs  parser.rs  path_safety.rs  preview_cache.rs  preview_thumb.rs  preview_uri.rs  registry.rs  seven_zip.rs  sevenz_fallback.rs  temp_session.rs  thumb_disk_cache.rs  zip_backend.rs  zip_handle_cache.rs
src-tauri/src/auth/: loopback.rs  mod.rs  session.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/workflow/: constants.rs  db.rs  mod.rs  sidecar.rs  types.rs
src/app/: App.tsx  api.ts  types.ts
src/app/components/: ArchiveContextMenu.tsx  ArchiveFileTable.tsx  ArchiveMenuBar.tsx  ArchiveMenuDropdown.tsx  ArchivePathBar.tsx  ArchiveTabBar.tsx  ArchiveWorkspace.tsx  ArchiveWorkspaceChrome.tsx  CreateHeheProgressOverlay.tsx  CreateHeheResultDialog.tsx  ExtractProgressOverlay.tsx  FileDragGhost.tsx  ProgressBar.tsx  SelectionMarquee.tsx  (+3 more)
(+66 files in other folders)
