[package]
name = "hehel-zip"
version = "0.3.0"
description = "Hehel Zip — archives and print workflow statuses"
authors = ["Hehestl"]
edition = "2021"

[lib]
name = "hehel_zip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
dunce = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
drag = "2.1"
clipboard-win = "5.4"
keyring = "3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
open = "5"
subtle = "2"
zstd = "0.13"
crc32fast = "1"
flate2 = "1"
lru = "0.12"
camino = "1"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
rayon = "1.10"

[features]
default = ["zip-native"]
zip-native = []

[dev-dependencies]
tempfile = "3"

# Снижает нагрузку на rustc в release (избегает STATUS_ACCESS_VIOLATION на Windows)
[profile.release]
opt-level = 3
codegen-units = 16
lto = "thin"
strip = true
